fix: drag at top with extra padding

--- a/src/Column.css
+++ b/src/Column.css
@@ -56,6 +56,7 @@
 
 .draggable {
   min-height: 91vh;
+  padding-top: 24px;
   cursor: pointer;
 }
 
